--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.flight-card{
+  background-color: #fff;
+  box-shadow: 0 0.0125em 0.75rem 0 rgba(20,18,81,.1);
+  margin-bottom: 0.5rem;
+  padding: 1.25rem 1.25rem 1rem;
+  position: relative;
+  z-index: 0;
+  width: 1000px;
+}
